--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -15,19 +15,21 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
-  image_picker: ^0.8.7+5
-  image_picker_for_web: ^2.1.10
+  image_picker: ^1.1.2
+  image_picker_for_web: ^3.0.6
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.12
   timeago: ^3.3.0
-  uuid: ^3.0.7
+  uuid: ^4.5.1
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
